修改反白效果

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -334,5 +334,5 @@ ul.thumbnails {
 
 li { list-style-type:none;}
 
-::selection { background: #ff5e99; color: #FFFFFF; text-shadow: 0; }
-::-moz-selection { background: #ff5e99; color: #FFFFFF; }
+::selection { background: #fff; color: #000; text-shadow: 0; }
+::-moz-selection { background: #fff; color: #000; }
