use Laravel-Elixir

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -267,7 +267,7 @@ a {
 
 .thumbnails li> .fff .caption { 
     background:#fff !important; 
-    padding:10px
+    padding:10px;
     height: 200px;
 }
 .page-header {
