--- a/public/css/desktop.css
+++ b/public/css/desktop.css
@@ -3113,6 +3113,22 @@ a:link, a:visited, a:active, a:hover {
   background-image: url("../images/doc.png");
 }
 
+#desktop .desktop ul li .chrome {
+  display: block;
+  margin: 10px;
+  padding: 40px 0 10px 0;
+  width: 100px;
+  background-position: 50% 5px;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-image: url("../images/chrome.png");
+  background-size: 30px;
+}
+
+#desktop .desktop ul li .chrome:hover {
+  cursor: pointer;
+}
+
 .box {
   position: fixed;
   height: 70%;
@@ -3124,6 +3140,13 @@ a:link, a:visited, a:active, a:hover {
   background-color: #fff;
   display: none;
   transition: opacity 0.3s;
+}
+
+.box.full {
+  height: calc(100% - 35px);
+  width: 100%;
+  top: 0;
+  left: 0;
 }
 
 .box .tool {
@@ -3164,6 +3187,126 @@ a:link, a:visited, a:active, a:hover {
 
 .box .tool ul li:last-child a {
   background-color: #900;
+}
+
+.box .edit {
+  height: 25px;
+  top: calc(0% + 30px);
+  color: #000;
+  background: #ECE9DA;
+  border-bottom: #DCD9C8 1px solid;
+}
+
+.box .edit ul {
+  margin: 0;
+  padding: 0;
+}
+
+.box .edit ul li {
+  list-style: none;
+  float: left;
+  top: 0;
+  left: 0;
+}
+
+.box .edit ul li a {
+  font-size: 14px;
+  display: block;
+  text-align: center;
+  color: #000;
+  padding: 2px;
+  margin-right: 3px;
+}
+
+.box .edit ul li a:hover {
+  background-color: #DCD9C8;
+}
+
+.box .edit div {
+  position: absolute;
+  width: 40px;
+  height: 25px;
+  left: calc(100% - 50px);
+  background-color: #fff;
+}
+
+.box .edit div img {
+  position: relative;
+  width: 25px;
+  height: 100%;
+  display: block;
+  margin: 0 auto;
+}
+
+.box .page-tool {
+  height: 50px;
+  top: calc(0% + 25px + 30px);
+  color: #000;
+  background: #ECE9DA;
+  border-bottom: #DCD9C8 1px solid;
+}
+
+.box .page-tool img {
+  height: 50px;
+}
+
+.box .url {
+  height: 25px;
+  top: calc(0% + 25px + 30px +50px);
+  color: #000;
+  background: #ECE9DA;
+  border-bottom: #DCD9C8 1px solid;
+}
+
+.box .url a {
+  width: 20px;
+  font-size: 14px;
+  display: inline;
+  color: #000;
+  margin-left: 10px;
+  padding-top: 2px;
+}
+
+.box .url input {
+  display: inline;
+  width: calc(95% - 20px);
+}
+
+.box .content {
+  height: calc(100% - (25px + 30px + 50px + 25px + 5px));
+  bottom: 0;
+}
+
+.box .content ul {
+  padding: 0;
+}
+
+.box .content ul li {
+  list-style: none;
+  text-align: center;
+  float: left;
+}
+
+.box .content ul li a {
+  display: block;
+  margin: 10px;
+  padding: 40px 0 10px 0;
+  width: 100px;
+  background-position: 50% 5px;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  color: #000;
+}
+
+.box .content ul li .image {
+  background-image: url("../images/img.png");
+}
+
+.box .img {
+  max-width: 100%;
+  max-height: calc(100% - 30px);
+  display: block;
+  margin: auto;
 }
 
 /*# sourceMappingURL=desktop.css.map */
