--- a/resources/assets/sass/desktop.scss
+++ b/resources/assets/sass/desktop.scss
@@ -66,9 +66,22 @@ a {
 				.computer {
 					background-image: url('../images/computer.png');
 				}
-
 				.doc {
 					background-image: url('../images/doc.png');
+				}
+				.chrome {
+					display: block;
+				    margin: 10px;
+				    padding: 40px 0 10px 0;
+				    width: 100px;
+				    background-position: 50% 5px;
+				    background-color: transparent;
+				    background-repeat: no-repeat;
+					background-image: url('../images/chrome.png');
+					background-size: 30px;
+					&:hover {
+						cursor: pointer;
+					}
 				}
 			}
 		}
@@ -87,6 +100,12 @@ a {
 	background-color: #fff;
 	display: none;
     @include transition(opacity .3s);
+	&.full {
+		height: calc(100% - 35px);
+		width: 100%;
+		top: 0;
+		left: 0;
+	}
 	.tool {
 		height: 30px;
 		background: radial-gradient(ellipse, $tool, $tool_gradient);
@@ -123,6 +142,113 @@ a {
 			}
 		}
 	}
+	.edit {
+		height: 25px;
+		top: calc(0% + 30px);
+		color: #000;
+		background: #ECE9DA;
+		border-bottom: #DCD9C8 1px solid;
+		ul {
+			margin: 0;
+			padding: 0;
+			li {
+				list-style: none;
+				float: left;
+				top: 0;
+				left: 0;
+				a {
+					font-size: 14px;
+					display: block;
+					text-align: center;
+					color: #000;
+					padding: 2px;
+					margin-right: 3px;
+					&:hover {
+						background-color: #DCD9C8;
+					}
+				}
+			}
+		}
+		div {
+			position: absolute;
+			width: 40px;
+			height: 25px;
+			left: calc(100% - 50px);
+			background-color: #fff;
+			img {
+				position: relative;
+				width: 25px;
+				height: 100%;
+				display: block;
+				margin: 0 auto;
+			}
+		}
+	}
+
+	.page-tool {
+		height: 50px;
+		top: calc(0% + 25px + 30px);
+		color: #000;
+		background: #ECE9DA;
+		border-bottom: #DCD9C8 1px solid;
+		img {
+			height: 50px;
+		}
+	}
+
+	.url {
+		height: 25px;
+		top: calc(0% + 25px + 30px +50px);
+		color: #000;
+		background: #ECE9DA;
+		border-bottom: #DCD9C8 1px solid;
+		a {
+			width: 20px;
+			font-size: 14px;
+			display: inline;
+			color: #000;
+			margin-left: 10px;
+			padding-top: 2px;
+		}
+		input {
+			display: inline;
+			width: calc(95% - 20px);
+		}
+	}
+
+	.content {
+		height: calc(100% - (25px + 30px + 50px + 25px + 5px));
+		bottom: 0;
+		ul {
+			padding: 0;
+			li {
+				list-style: none;
+				text-align: center;
+				float: left;
+				a {
+					display: block;
+				    margin: 10px;
+				    padding: 40px 0 10px 0;
+				    width: 100px;
+				    background-position: 50% 5px;
+				    background-color: transparent;
+				    background-repeat: no-repeat;
+				    color: #000;
+				}
+				.image {
+					background-image: url('../images/img.png');
+				}
+			}
+		}
+	}
+	.img {
+		max-width: 100%;
+		max-height: calc(100% - 30px);
+		display: block;
+		margin: auto;
+	}
 }
+
+
 
 
