fix chrome.png bug

--- a/resources/assets/sass/desktop.scss
+++ b/resources/assets/sass/desktop.scss
@@ -77,7 +77,7 @@ a {
 				    background-position: 50% 5px;
 				    background-color: transparent;
 				    background-repeat: no-repeat;
-					background-image: url('../images/chrome.png');
+					background-image: url('../images/Chrome.png');
 					background-size: 30px;
 					&:hover {
 						cursor: pointer;
