--- a/public/css/desktop.css
+++ b/public/css/desktop.css
@@ -3121,7 +3121,7 @@ a:link, a:visited, a:active, a:hover {
   background-position: 50% 5px;
   background-color: transparent;
   background-repeat: no-repeat;
-  background-image: url("../images/chrome.png");
+  background-image: url("../images/Chrome.png");
   background-size: 30px;
 }
 
