--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -246,9 +246,8 @@ li.active:after {
 }
 
 .user-img {
-    width: 140px;
-    height: 140px;
-    border-radius: 99em;
+    width: 80%;
+    border-radius: 100%;
 }
 /* Global */
  
