--- a/resources/assets/sass/desktop.scss
+++ b/resources/assets/sass/desktop.scss
@@ -58,6 +58,7 @@ a {
 		    background-color: transparent;
 		    background-repeat: no-repeat;
 		    text-align: center;
+		    text-shadow: 1px 1px 1px #000;
 			&:hover {
 				cursor: pointer;
 			}
@@ -205,27 +206,23 @@ a {
 	.content {
 		height: calc(100% - (25px + 30px + 50px + 25px + 5px));
 		bottom: 0;
-		ul {
-			padding: 0;
-			li {
-				list-style: none;
-				text-align: center;
-				float: left;
-				a {
-					display: block;
-				    margin: 10px;
-				    padding: 40px 0 10px 0;
-				    width: 100px;
-				    background-position: 50% 5px;
-				    background-color: transparent;
-				    background-repeat: no-repeat;
-				    color: #000;
-				}
-				.image {
-					background-image: url('../images/img.png');
-				}
-			}
+		width: 100%;
+		text-align: center;
+		a {
+			display: block;
+		    margin: 10px;
+		    padding: 40px 0 10px 0;
+		    width: 100px;
+		    background-position: 50% 5px;
+		    background-color: transparent;
+		    background-repeat: no-repeat;
+		    color: #000;
+		    float: left;
 		}
+		.image {
+			background-image: url('../images/img.png');
+		}
+
 	}
 	.img {
 		max-width: 100%;
