practice dialog banner

--- a/resources/assets/sass/practice.scss
+++ b/resources/assets/sass/practice.scss
@@ -1,5 +1,5 @@
 @import 'node_modules/bootstrap-sass/assets/stylesheets/_bootstrap.scss';
-@import "node_modules/font-awesome/scss/font-awesome";
+@import 'node_modules/font-awesome/scss/font-awesome';
 
 .wizard {
     margin: 20px auto;
