--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,354 +1,117 @@
+/*!
+ * fullPage 2.9.5
+ * https://github.com/alvarotrigo/fullPage.js
+ * MIT licensed
+ *
+ * Copyright (C) 2013 alvarotrigo.com - A project by Alvaro Trigo
+ */.fp-enabled body,html.fp-enabled{margin:0;padding:0;overflow:hidden;-webkit-tap-highlight-color:rgba(0,0,0,0)}.fp-section{position:relative;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}.fp-slide{float:left}.fp-slide,.fp-slidesContainer{height:100%;display:block}.fp-slides{z-index:1;height:100%;overflow:hidden;position:relative;-webkit-transition:all .3s ease-out;transition:all .3s ease-out}.fp-section.fp-table,.fp-slide.fp-table{display:table;table-layout:fixed;width:100%}.fp-tableCell{display:table-cell;vertical-align:middle;width:100%;height:100%}.fp-slidesContainer{float:left;position:relative}.fp-controlArrow{-webkit-user-select:none;-moz-user-select:none;-khtml-user-select:none;-ms-user-select:none;position:absolute;z-index:4;top:50%;cursor:pointer;width:0;height:0;border-style:solid;margin-top:-38px;-webkit-transform:translate3d(0,0,0);-ms-transform:translate3d(0,0,0);transform:translate3d(0,0,0)}.fp-controlArrow.fp-prev{left:15px;width:0;border-width:38.5px 34px 38.5px 0;border-color:transparent #fff transparent transparent}.fp-controlArrow.fp-next{right:15px;border-width:38.5px 0 38.5px 34px;border-color:transparent transparent transparent #fff}.fp-scrollable{overflow:hidden;position:relative}.fp-scroller{overflow:hidden}.iScrollIndicator{border:0!important}.fp-notransition{-webkit-transition:none!important;transition:none!important}#fp-nav{position:fixed;z-index:100;margin-top:-32px;top:50%;opacity:1;-webkit-transform:translate3d(0,0,0)}#fp-nav.right{right:17px}#fp-nav.left{left:17px}.fp-slidesNav{position:absolute;z-index:4;opacity:1;-webkit-transform:translate3d(0,0,0);-ms-transform:translate3d(0,0,0);transform:translate3d(0,0,0);left:0!important;right:0;margin:0 auto!important}.fp-slidesNav.bottom{bottom:17px}.fp-slidesNav.top{top:17px}#fp-nav ul,.fp-slidesNav ul{margin:0;padding:0}#fp-nav ul li,.fp-slidesNav ul li{display:block;width:14px;height:13px;margin:7px;position:relative}.fp-slidesNav ul li{display:inline-block}#fp-nav ul li a,.fp-slidesNav ul li a{display:block;position:relative;z-index:1;width:100%;height:100%;cursor:pointer;text-decoration:none}#fp-nav ul li a.active span,#fp-nav ul li:hover a.active span,.fp-slidesNav ul li a.active span,.fp-slidesNav ul li:hover a.active span{height:12px;width:12px;margin:-6px 0 0 -6px;border-radius:100%}#fp-nav ul li a span,.fp-slidesNav ul li a span{border-radius:50%;position:absolute;z-index:1;height:4px;width:4px;border:0;background:#333;left:50%;top:50%;margin:-2px 0 0 -2px;-webkit-transition:all .1s ease-in-out;-moz-transition:all .1s ease-in-out;-o-transition:all .1s ease-in-out;transition:all .1s ease-in-out}#fp-nav ul li:hover a span,.fp-slidesNav ul li:hover a span{width:10px;height:10px;margin:-5px 0 0 -5px}#fp-nav ul li .fp-tooltip{position:absolute;top:-2px;color:#fff;font-size:14px;font-family:arial,helvetica,sans-serif;white-space:nowrap;max-width:220px;overflow:hidden;display:block;opacity:0;width:0;cursor:pointer}#fp-nav ul li:hover .fp-tooltip,#fp-nav.fp-show-active a.active+.fp-tooltip{-webkit-transition:opacity .2s ease-in;transition:opacity .2s ease-in;width:auto;opacity:1}#fp-nav ul li .fp-tooltip.right{right:20px}#fp-nav ul li .fp-tooltip.left{left:20px}.fp-auto-height .fp-slide,.fp-auto-height .fp-tableCell,.fp-auto-height.fp-section{height:auto!important}.fp-responsive .fp-auto-height-responsive .fp-slide,.fp-responsive .fp-auto-height-responsive .fp-tableCell,.fp-responsive .fp-auto-height-responsive.fp-section{height:auto!important}
+/*# sourceMappingURL=jquery.fullpage.min.css.map */
+
 @import url(http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700);
-.board {
-  width: 75%;
-  margin: 60px auto;
-  height: 500px;
-  background: #fff;
-}
-
-.board .nav-tabs {
-  position: relative;
-  margin: 40px auto;
-  margin-bottom: 0;
-  box-sizing: border-box;
-}
-
-.board > div.board-inner {
-  background: #fafafa url(http://subtlepatterns.com/patterns/geometry2.png);
-  background-size: 30%;
-}
-
-p.narrow {
-  width: 60%;
-  margin: 10px auto;
-}
-
-.liner {
-  height: 2px;
-  background: #ddd;
-  position: absolute;
-  width: 80%;
-  margin: 0 auto;
+/* ------------------------------- *
+ *              Menu               *
+ * ------------------------------- */
+#menu {
+  position: fixed;
+  top: 0;
   left: 0;
-  right: 0;
-  top: 50%;
-  z-index: 1;
-}
-
-.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
-  color: #555555;
-  cursor: default;
-  border: 0;
-  border-bottom-color: transparent;
-}
-
-span.round-tabs {
-  width: 70px;
-  height: 70px;
-  line-height: 70px;
-  display: inline-block;
-  border-radius: 100px;
-  background: white;
-  z-index: 2;
-  position: absolute;
-  left: 0;
-  text-align: center;
-  font-size: 25px;
-}
-
-span.round-tabs.one {
-  color: #22c222;
-  border: 2px solid #22c222;
-}
-
-li.active span.round-tabs.one {
-  background: #fff !important;
-  border: 2px solid #ddd;
-  color: #22c222;
-}
-
-span.round-tabs.two {
-  color: #febe29;
-  border: 2px solid #febe29;
-}
-
-li.active span.round-tabs.two {
-  background: #fff !important;
-  border: 2px solid #ddd;
-  color: #febe29;
-}
-
-span.round-tabs.three {
-  color: #3e5e9a;
-  border: 2px solid #3e5e9a;
-}
-
-li.active span.round-tabs.three {
-  background: #fff !important;
-  border: 2px solid #ddd;
-  color: #3e5e9a;
-}
-
-span.round-tabs.four {
-  color: #f1685e;
-  border: 2px solid #f1685e;
-}
-
-li.active span.round-tabs.four {
-  background: #fff !important;
-  border: 2px solid #ddd;
-  color: #f1685e;
-}
-
-span.round-tabs.five {
-  color: #999;
-  border: 2px solid #999;
-}
-
-li.active span.round-tabs.five {
-  background: #fff !important;
-  border: 2px solid #ddd;
-  color: #999;
-}
-
-.nav-tabs > li.active > a span.round-tabs {
-  background: #fafafa;
-}
-
-.nav-tabs > li {
-  width: 25%;
-}
-
-li:after {
-  content: " ";
-  position: absolute;
-  left: 45%;
-  opacity: 0;
-  margin: 0 auto;
-  bottom: 0px;
-  border: 5px solid transparent;
-  border-bottom-color: #ddd;
-  transition: 0.1s ease-in-out;
-}
-
-li.active:after {
-  content: " ";
-  position: absolute;
-  left: 45%;
-  opacity: 1;
-  margin: 0 auto;
-  bottom: 0px;
-  border: 10px solid transparent;
-  border-bottom-color: #ddd;
-}
-
-.nav-tabs > li a {
-  width: 70px;
-  height: 70px;
-  margin: 20px auto;
-  border-radius: 100%;
-  padding: 0;
-}
-
-.nav-tabs > li a:hover {
-  background: transparent;
-}
-
-.tab-pane {
-  position: relative;
-  padding-top: 50px;
-}
-
-.tab-content .head {
-  font-family: 'Roboto Condensed', sans-serif;
-  font-size: 25px;
-  text-transform: uppercase;
-  padding-bottom: 10px;
-}
-
-.btn-outline-rounded {
-  padding: 10px 40px;
-  margin: 20px 0;
-  border: 2px solid transparent;
-  border-radius: 25px;
-}
-
-.btn.green {
-  background-color: #5cb85c;
-  color: #ffffff;
-}
-
-@media (max-width: 585px) {
-  .board {
-    width: 90%;
-    height: auto !important;
-  }
-  span.round-tabs {
-    font-size: 16px;
-    width: 50px;
-    height: 50px;
-    line-height: 50px;
-  }
-  .tab-content .head {
-    font-size: 20px;
-  }
-  .nav-tabs > li a {
-    width: 50px;
-    height: 50px;
-    line-height: 50px;
-  }
-  li.active:after {
-    content: " ";
-    position: absolute;
-    left: 35%;
-  }
-  .btn-outline-rounded {
-    padding: 12px 20px;
-  }
-}
-
-.panel-pricing {
-  -moz-transition: all .3s ease;
-  -o-transition: all .3s ease;
-  -webkit-transition: all .3s ease;
-}
-
-.panel-pricing:hover {
-  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.2);
-}
-
-.panel-pricing .panel-heading {
-  padding: 20px 10px;
-}
-
-.panel-pricing .panel-heading .fa {
-  margin-top: 10px;
-  font-size: 58px;
-}
-
-.panel-pricing .list-group-item {
-  color: #777777;
-  border-bottom: 1px solid rgba(250, 250, 250, 0.5);
-}
-
-.panel-pricing .list-group-item:last-child {
-  border-bottom-right-radius: 0px;
-  border-bottom-left-radius: 0px;
-}
-
-.panel-pricing .list-group-item:first-child {
-  border-top-right-radius: 0px;
-  border-top-left-radius: 0px;
-}
-
-.panel-pricing .panel-body {
-  background-color: #f0f0f0;
-  font-size: 40px;
-  color: #777777;
-  padding: 20px;
-  margin: 0px;
-}
-
-.user-img {
-  width: 80%;
-  border-radius: 100%;
-}
-
-/* Global */
-img {
-  max-width: 100%;
-}
-
-a {
-  transition: all 150ms ease;
-}
-
-.thumbnails li > .fff .caption {
-  background: #fff !important;
-  padding: 10px;
-  height: 200px;
-}
-
-.page-header {
-  background: #f9f9f9;
-  margin: -30px -40px 40px;
-  padding: 20px 40px;
-  border-top: 4px solid #ccc;
-  color: #999;
-  text-transform: uppercase;
-}
-
-.page-header h3 {
-  line-height: 0.88rem;
-  color: #000;
-}
-
-ul.thumbnails {
-  margin-bottom: 0px;
-  height: 200px;
-}
-
-.caption h4 {
-  color: #444;
-}
-
-.caption p {
-  color: #999;
-}
-
-/* Carousel Control */
-.control-box {
-  text-align: right;
+  height: 40px;
+  z-index: 70;
   width: 100%;
+  padding: 0;
+  margin: 0;
 }
 
-.carousel-control {
-  background: #666;
-  border: 0px;
-  border-radius: 0px;
+#menu li {
   display: inline-block;
-  font-size: 34px;
-  font-weight: 200;
-  line-height: 18px;
-  opacity: 0.5;
-  padding: 4px 10px 0px;
-  position: static;
-  height: 30px;
-  width: 15px;
-}
-
-/* Mobile Only */
-@media (max-width: 767px) {
-  .page-header, .control-box {
-    text-align: center;
-  }
-}
-
-@media (max-width: 479px) {
-  .caption {
-    word-break: break-all;
-  }
-}
-
-li {
-  list-style-type: none;
-}
-
-::-moz-selection {
-  background: #fff;
+  margin: 10px;
   color: #000;
-  text-shadow: 0;
+  background: #fff;
+  background: rgba(255, 255, 255, 0.5);
+  border-radius: 10px;
 }
 
-::selection {
-  background: #fff;
+#menu li a {
+  text-decoration: none;
   color: #000;
-  text-shadow: 0;
+  padding: 9px 18px;
+  display: block;
 }
 
-::-moz-selection {
-  background: #fff;
+#menu li:hover {
+  background: rgba(255, 255, 255, 0.8);
+}
+
+#menu li.active {
+  background: #666;
+  background: rgba(0, 0, 0, 0.5);
+  color: #fff;
+}
+
+#menu li.active a {
+  color: #fff;
+}
+
+#menu li.active a:hover {
   color: #000;
 }
+
+#menu li.active:hover {
+  background: #fff;
+}
+
+#fullpage p {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 1200;
+  font-size: 8em;
+  -webkit-text-shadow: 0 0.3rem 0.9rem rgba(0, 0, 0, 0.4);
+  text-shadow: 0 0.3rem 0.9rem rgba(0, 0, 0, 0.4);
+  letter-spacing: -3px;
+  color: #fff;
+}
+
+#fullpage p a {
+  color: #fff;
+  text-decoration: none;
+}
+
+#fullpage pre {
+  font-size: 1.5em;
+}
+
+#fullpage .user-img {
+  width: 60%;
+  border-radius: 100%;
+}
+
+#fullpage #home {
+  text-align: center;
+}
+
+#fullpage #home .fp-tableCell {
+  background-image: url("../../public/images/img2.jpg");
+  background-size: cover;
+  background-position: center 80%;
+}
+
+#fullpage #profile .fp-tableCell {
+  background-image: url("../../public/images/img1.jpg");
+  background-size: cover;
+  background-position: center 80%;
+}
+
+#fullpage #skills .fp-tableCell {
+  background-image: url("../../public/images/img4.jpg");
+  background-size: cover;
+  background-position: center 80%;
+}
+
+#fullpage #projects .fp-tableCell {
+  background-image: url("../../practice/images/banner2.jpeg");
+  background-size: cover;
+  background-position: center 80%;
+}
+
+/*# sourceMappingURL=app.css.map */
 
 /*# sourceMappingURL=app.css.map */
