--- a/public/css/app.css
+++ b/public/css/app.css
@@ -24,7 +24,7 @@
 
 #menu li {
   display: inline-block;
-  margin: 10px;
+  margin: 5px;
   color: #000;
   background: #fff;
   background: rgba(255, 255, 255, 0.5);
@@ -34,7 +34,7 @@
 #menu li a {
   text-decoration: none;
   color: #000;
-  padding: 9px 18px;
+  padding: 8px 16px;
   display: block;
 }
 
@@ -62,11 +62,11 @@
 
 #fullpage p {
   font-family: 'Roboto Condensed', sans-serif;
-  font-weight: 1200;
-  font-size: 8em;
+  font-weight: 5vw;
+  font-size: 7vw;
   -webkit-text-shadow: 0 0.3rem 0.9rem rgba(0, 0, 0, 0.4);
   text-shadow: 0 0.3rem 0.9rem rgba(0, 0, 0, 0.4);
-  letter-spacing: -3px;
+  letter-spacing: 2px;
   color: #fff;
 }
 
