--- a/public/css/windows.css
+++ b/public/css/windows.css
@@ -1,107 +1,1 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:100,300,700");
-body {
-  background: #000;
-  font-family: 'Roboto', sans-serif;
-  color: #fff;
-}
-
-@-webkit-keyframes loader {
-  0% {
-    -webkit-transform: translate(-30px);
-    transform: translate(-30px);
-  }
-  100% {
-    -webkit-transform: translate(150px);
-    transform: translate(150px);
-  }
-}
-
-@keyframes loader {
-  0% {
-    -webkit-transform: translate(-30px);
-    transform: translate(-30px);
-  }
-  100% {
-    -webkit-transform: translate(150px);
-    transform: translate(150px);
-  }
-}
-
-#window-boot {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-right: -50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-
-#window-boot .logo {
-  width: 220px;
-  margin: 50px auto;
-}
-
-#window-boot .logo p {
-  margin: 0;
-  padding: 0;
-}
-
-#window-boot .logo .top {
-  font-size: 16px;
-  font-weight: 300;
-  line-height: 16px;
-}
-
-#window-boot .logo .top:after {
-  content: "\00a9";
-  font-size: 10px;
-  position: relative;
-  top: -5px;
-  margin-left: 2px;
-}
-
-#window-boot .logo .mid {
-  font-size: 46px;
-  font-weight: 700;
-  line-height: 36px;
-}
-
-#window-boot .logo .mid span {
-  font-size: 22px;
-  display: inline-block;
-  vertical-align: top;
-  color: #FF6821;
-  margin-top: -8px;
-}
-
-#window-boot .logo .bottom {
-  font-size: 30px;
-  font-weight: 300;
-  line-height: 30px;
-  margin-left: 5px;
-}
-
-#window-boot .container {
-  width: 150px;
-  height: 10px;
-  border: 2px solid #b2b2b2;
-  border-radius: 7px;
-  margin: 0 auto;
-  padding: 2px 1px;
-  overflow: hidden;
-  font-size: 0;
-}
-
-#window-boot .container .box {
-  width: 9px;
-  height: 100%;
-  background: linear-gradient(to bottom, #2838c7 0%, #5979ef 17%, #869ef3 32%, #869ef3 45%, #5979ef 59%, #2838c7 100%);
-  display: inline-block;
-  margin-right: 2px;
-  -webkit-animation: loader 2s infinite;
-  animation: loader 2s infinite;
-  -webkit-animation-timing-function: linear;
-  animation-timing-function: linear;
-}
-
-/*# sourceMappingURL=windows.css.map */
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,300,700);body{background:#000;font-family:Roboto,sans-serif;color:#fff}@-webkit-keyframes loader{0%{-webkit-transform:translate(-30px);transform:translate(-30px)}100%{-webkit-transform:translate(150px);transform:translate(150px)}}@keyframes loader{0%{-webkit-transform:translate(-30px);transform:translate(-30px)}100%{-webkit-transform:translate(150px);transform:translate(150px)}}#window-boot{position:absolute;top:50%;left:50%;margin-right:-50%;-webkit-transform:translate(-50%,-50%);transform:translate(-50%,-50%)}#window-boot .logo{width:220px;margin:50px auto}#window-boot .logo p{margin:0;padding:0}#window-boot .logo .top{font-size:16px;font-weight:300;line-height:16px}#window-boot .logo .top:after{content:"\00a9";font-size:10px;position:relative;top:-5px;margin-left:2px}#window-boot .logo .mid{font-size:46px;font-weight:700;line-height:36px}#window-boot .logo .mid span{font-size:22px;display:inline-block;vertical-align:top;color:#FF6821;margin-top:-8px}#window-boot .logo .bottom{font-size:30px;font-weight:300;line-height:30px;margin-left:5px}#window-boot .container{width:150px;height:10px;border:2px solid #b2b2b2;border-radius:7px;margin:0 auto;padding:2px 1px;overflow:hidden;font-size:0}#window-boot .container .box{width:9px;height:100%;background:linear-gradient(to bottom,#2838c7 0,#5979ef 17%,#869ef3 32%,#869ef3 45%,#5979ef 59%,#2838c7 100%);display:inline-block;margin-right:2px;-webkit-animation:loader 2s infinite;animation:loader 2s infinite;-webkit-animation-timing-function:linear;animation-timing-function:linear}
