--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -80,86 +80,29 @@
         }
     }
     #profile .fp-tableCell{
-        background-image: url('../../public/images/img1.jpg');
-        background-size: cover;
-        background-position: center 80%;
-    }
-    #skills .fp-tableCell{
         background-image: url('../../public/images/img4.jpg');
         background-size: cover;
         background-position: center 80%;
     }
-    #projects .fp-tableCell{
-        background-image: url('../../practice/images/banner2.jpeg');
+    #skills .fp-tableCell{
+        background-color: #000;
         background-size: cover;
         background-position: center 80%;
     }
-}
-
-/* ------------------------------- *
- *             loading             *
- * ------------------------------- */
-#loading {
-    background-color: #fff;
-    display: block;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 9999;
-    & > #loader {
-        position: absolute;
-        top: 50%;
-        margin-top: -75px;
-        width: 100%;
-        text-align: center;
-        text-transform: uppercase;
-        font-family: 'Nunito', sans-serif;
-        font-size: 4.6875em;
-        color: transparent;
-        letter-spacing: 0.01em;
-        & > span {
+    #projects .fp-tableCell{
+        background-color: #000;
+        background-size: cover;
+        background-position: center 80%;
+        & p:hover {
             text-shadow:
-                0 0 2px rgba(204, 208, 212,0.9),
+                0 0 20px rgba(204, 208, 212,0.9),
                 0 15px 25px rgba(0, 0, 0, 0.3),
-                0 -2px 3px rgba(0, 0, 0, 0.1),
+                0 -20px 3px rgba(0, 0, 0, 0.1),
                 0 -5px 10px rgba(255, 255, 255, 0.5),
-                0 5px 10px rgba(0, 0, 0, 0.3),
+                0 50px 10px rgba(0, 0, 0, 0.3),
                 0 3px 4px rgba(255, 255, 255, 0.2),
                 0 0 20px rgba(255, 255, 255, 0.45);
-            animation: loading 0.85s ease-in-out infinite alternate;
-            &:nth-child(2) {
-                animation-delay: .1s;
-            }
-            &:nth-child(3) {
-                animation-delay: .2s;
-            }
-            &:nth-child(4) {
-                animation-delay: .3s;
-            }
-            &:nth-child(5) {
-                animation-delay: .4s;
-            }
-            &:nth-child(6) {
-                animation-delay: .5s;
-            }
-            &:nth-child(7) {
-                animation-delay: .6s;
-            }
         }
-    }
-}
 
-@keyframes loading {
-    to {
-        text-shadow:
-            0 0 2px rgba(204, 208, 212,0.2),
-            0 0 3px rgba(0, 0, 0, 0.02),
-            0 0 0 rgba(0, 0, 0, 0),
-            0 0 0 rgba(255, 255, 255, 0),
-            0 0 0 rgba(0, 0, 0, 0),
-            0 0 0 rgba(255, 255, 255, 0),
-            0 0 0 rgba(255, 255, 255, 0);
     }
 }
