--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,5 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700);
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+@import "node_modules/font-awesome/scss/font-awesome";
 
 /* ------------------------------- *
  *              Menu               *
